<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.logintimetable.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.logintimetable.ui.setting.SettingFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.logintimetable.ui.feedback_1.Feedback_1Fragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.logintimetable.ui.rateusonplaystore.RateusonplaystoreFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_rate_us" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.logintimetable.ui.developer.DevelopersFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_developers" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.logintimetable.ui.logout.LogoutFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_logout" />
</navigation>